--- a/CapstoneProject/CapstoneProject.csproj
+++ b/CapstoneProject/CapstoneProject.csproj
@@ -6,4 +6,14 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Commands" />
+      <Folder Include="Exceptions" />
+      <Folder Include="Models" />
+      <Folder Include="Services" />
+      <Folder Include="Stores" />
+      <Folder Include="ViewModels" />
+      <Folder Include="Views" />
+    </ItemGroup>
+
 </Project>
